<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".DeliveryDetailsActivity">

    <ImageView
        android:id="@+id/popup_imgview"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="8dp"
        android:elevation="6dp"
        android:src="@drawable/location_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ll_black"
        app:layout_editor_absoluteX="155dp"
        app:layout_editor_absoluteY="155dp" />

    <LinearLayout
        android:id="@+id/ll_popup"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="204dp"
        android:background="@drawable/popup_background"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="60dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Order Placed Successfully..!"
            android:textColor="#343434"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="40dp"
            android:lineSpacingExtra="4dp"
            android:text="We will sent your order on your location."
            android:textAlignment="center"
            android:textColor="#343434"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_gradient"
            android:text="Ok"
            android:textColor="#ffffff"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/overbox_background"
        android:elevation="3dp"
        android:orientation="vertical"
        android:visibility="visible"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-47dp"></LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:text="Enter Delivery details"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editText_deliverydetails_fullname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:hint="Full name"
                android:textColorHint="@color/gradient_start_color"
                app:boxStrokeColor="@color/gradient_start_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_heading">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_deliverydetails_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_user"
                    android:inputType="text"
                    android:textColor="@color/gradient_start_color" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editText_deliverydetails_whatsappmobilenumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:hint="WhatsApp number"
                android:textColorHint="@color/gradient_start_color"
                app:boxStrokeColor="@color/gradient_start_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_deliverydetails_fullname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_deliverydetails_whatsappmobilenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_whatsapp"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColor="@color/gradient_start_color" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editText_deliverydetails_mobilenumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:hint="Calling Number (Optional)"
                android:textColorHint="@color/gradient_start_color"
                app:boxStrokeColor="@color/gradient_start_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_deliverydetails_whatsappmobilenumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_deliverydetails_mobilenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_phone"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColor="@color/gradient_start_color" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editText_deliverydetails_address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:hint="Delivery Address"
                android:textColorHint="@color/gradient_start_color"
                app:boxStrokeColor="@color/gradient_start_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_deliverydetails_mobilenumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_deliverydetails_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_location"
                    android:lines="4"
                    android:textColor="@color/gradient_start_color" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editText_deliverydetails_landmark"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:hint="Landmark"
                android:textColorHint="@color/gradient_start_color"
                app:boxStrokeColor="@color/gradient_start_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_deliverydetails_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_deliverydetails_landmark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_location"
                    android:inputType="text|textCapWords|textCapSentences"
                    android:textColor="@color/gradient_start_color" />

            </com.google.android.material.textfield.TextInputLayout>


            <Spinner
                android:id="@+id/spinner_area"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_deliverydetails_landmark" />

            <Spinner
                android:id="@+id/spinner_agent"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_area" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/spinner_agent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_cart_item" />

                        <TextView
                            android:id="@+id/tv_deli_itemcount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="4" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="end"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_cart_total" />

                        <TextView
                            android:id="@+id/tv_deli_totalamt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="50" />

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dp"
                            android:text="@string/currency" />
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_deli_checkout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="70dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_gradient"
                    android:onClick="btnSubmitPlaceOrder"
                    android:text="Submit"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox_login" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>